@startuml DB

class Empresa {

}

abstract class Persona {
    +cedula: str
    +nombres: str
    +apellidos: str
    +fecha_nacimiento: date
    +correo_electronico: str
    +direccion: str
}

class Encargado {
    + ruc
}

class Trabajador {

}

class Propietario {
    -persona_ptr: int
    +vehiculos
}

class Conductor {
    -persona_ptr: int
    +licencia
}

class Encargado {

}

class Vehiculo {
    +propietario
    +marca: str
    +modelo: str
    +placa: str
    +anio_de_fabricacion: int
    +color: str
    +cilindraje: float
    +tonelaje: float
    +unidad_carburaje: float
    +combustible: str
    +condicion: str
    +fotografia
    +matricula
    +llantas
}

class Licencia {
    +tipo: str
    +fecha_de_caducidad: date
    +es_profesional: bool
    +esta_vigente()
}

class Matricula {
    +propietario
    +vehiculo
    +matricula: str
    +foto
}

class Llanta {
    +vehiculo
    +codigo_de_fabricacion: str
    +posicion_respecto_al_vehiculo: str
}

Trabajador --|> Persona
Encargado --|> Persona
Empresa o--> "*" Trabajador
Empresa o--> "*" Encargado

Persona <|-- Propietario
Trabajador <|-- Conductor
Trabajador <|-- Responsable
Propietario *--> "1" Vehiculo
Conductor --> "1" Licencia
Conductor --> "conduce" Vehiculo
Vehiculo *-- Matricula
Vehiculo *-- Llanta

Responsable --> "*" OrdenTrabajo
Responsable --> "*" OrdenMovimiento

OrdenMovimiento -left-> "1" Conductor

@enduml
